--- a/src/css/main.css
+++ b/src/css/main.css
@@ -61,9 +61,9 @@ nav.navbar-default .btn {
 	height : 3rem;
 	border: 2px solid black;  border-radius: 22px;
 	text-transform: uppercase;
-	font-size: 1.7rem;
+	font-size: 1.2rem;
 	font-family: calibri;
-	font-weight : normal;
+	font-weight: bold;
 	width : 100%;
 }
 
@@ -76,6 +76,7 @@ a.btn.btn-back-home {
 	font-family: calibri;
 	border: 1px solid black;
 	border-radius: 10px;
+	font-size: 1.0rem;
 }
 
 a.btn.btn-back-home .fa {
@@ -150,8 +151,8 @@ a.btn.btn-back-home .fa {
 .home-header {
 	background: url("../img/home/motif.png") repeat;
 	border-color: transparent;
-	height: 170px;
-	background-size : 130px;
+	height: 160px;
+	background-size: 122px;
 	margin-top: 0px;
 }
 
@@ -163,7 +164,7 @@ a.btn.btn-back-home .fa {
 }
 
 .btn-home {
-	width : 85%;
+	width: 95%;
 	height: 100px;
 	margin: 19px;
 	margin-top: 19px;
@@ -181,24 +182,35 @@ a.btn.btn-back-home .fa {
 	font-size: 1.4em;
 }
 
-.image-helene-flo {
+.intro-helene-flo {
 	margin-top: 50px;
-	height : 150px;
+	font-size: 3rem;
+	color : white;
 }
 
 .image-fleche {
 	width : 100%;
-	display:none;
+}
+
+.only-big-screen {
+	display : none;
+}
+.only-minor-screen {
+	display : inline-block;
 }
 
 .image-fleche-haut-bas {
 	margin-top : 50px;
 
+	height: 178px;
 }
 
 @media screen and (min-width: 992px) {
-	.image-fleche {
-		display:block;
+	.only-big-screen {
+		display : inline-block;
+	}
+	.only-minor-screen  {
+		display : none;
 	}
 }
 
