--- a/src/css/main.css
+++ b/src/css/main.css
@@ -37,19 +37,20 @@ body {
 }
 #map .angular-google-map-container {
 	height: 100vh;
+	margin-top: 59px;
 }
 #map * {
 
 }
 
 #searchBox {
-	top: 140px !important;
+	top: 100px !important;
 	width: 300px;
 	height: 38px;
 	font-size: 20px;
 	padding-left: 5px;
 	padding-right: 5px;
-	left: 50px !important;
+	left: 95px !important;
 }
 
 .gmnoprint {
@@ -68,7 +69,7 @@ body {
 
 /* BOF ----------------------------------- NAVIGATION -----------------------*/
 nav.navbar-default {
-	background-color: transparent;
+	background-color: #f8f8f8;
 	border-color: transparent;
 	z-index: 1;
 }
@@ -85,8 +86,8 @@ nav.navbar-default .btn {
 
 a.btn.btn-back-home {
 	position: absolute;
-	top: 70px;
-	left: 50px;
+	top: 110px;
+	left: 95px;
 	z-index:1000;
 	width: 10rem;
 	font-family: calibri;
@@ -103,6 +104,11 @@ a.btn.btn-back-home .fa {
 
 /* EOF ----------------------------------- NAVIGATION -----------------------*/
 
+/* BOF ------------------------------------ MAP -----------------------------*/
+.angular-google-map-container .gm-style-cc span {
+	font-size : 30px;
+}
+
 /* BOF ----------------------------------- POI INFO -----------------------*/
 
 .poi-info-container .modal-title{
@@ -110,6 +116,25 @@ a.btn.btn-back-home .fa {
 }
 
 .poi-info-container .btn{
+	width : 100%;
+}
+
+.poi-info-container .astuces{
+	padding-top : 5px;
+}
+
+.poi-info-container .distance{
+	text-align: center;
+}
+
+.poi-info-container .distance *{
+	display : inline-block;
+}
+
+.poi-info-container .modal-header h2{
+}
+
+.poi-info-container img{
 	width : 100%;
 }
 
